[fix] ban podcast list spacing introduced in c1b07c9

--- a/css/main.scss
+++ b/css/main.scss
@@ -127,10 +127,13 @@ a:hover { color: #aaa }
   padding: 1.25em 1em;
   & > a.episode {
     font-size: 1.3em;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     padding: 0 0.25em;
     line-height: 1.5em;
     &.red { background-color: $red-trans }
+    margin-right: 0.5em;
+    &:last-child { margin-right: 0 }
+
   }
   & > a.episode.selected {
     background-color: white;
